Fix content pane display on mobile after it's dismissed for the first time

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -8,6 +8,9 @@
   width: 100%;
   transition: all .4s ease;
 
+  @media only screen and (max-width: 800px) {
+    display: none;
+  }
   @media only screen and (min-width: 800px) {
     position: absolute;
     top: 0;
@@ -19,6 +22,9 @@
     opacity: 1;
     visibility: visible;
 
+    @media only screen and (max-width: 800px) {
+      display: block;
+    }
     @media only screen and (min-width: 800px) {
       right: 0;
       bottom: 0;
